# w3cwatcher

./: README.md  pyproject.toml  run.py  run_tray.pyw  w3cwatcher.spec
pixel_watcher/: __init__.py  cli.py  color_names.py  config.py  notifier.py  pixel_utils.py  tray.py  utils.py  watcher.py  window_utils.py
w3cwatcher/: __init__.py  cli.py  color_names.py  config.py  console_utils.py  discord_notifier.py  log.py  logging.py  monitor.py  notifier.py  state_manager.py  tray.py  unified_config.py  utils.py  watcher.py  window_utils.py
w3cwatcher/utils/: __init__.py  config_base.py  discord.py  geometry.py  image.py  platform.py  window.py
