[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "w3cwatcher"
version = "0.1.0"
description = "Watch color of W3Champions match button and notify via Discord when it stops being red (in-queue)."
authors = [{ name = "Cubiss" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pillow>=9.0",
    "requests>=2.28",
    "platformdirs>=3.0",
    "pyautogui>=0.9",
    "pywin32>=306; platform_system == 'Windows'",
    "pystray>=0.19; platform_system == 'Windows'",
]

[project.scripts]
w3cwatcher = "w3cwatcher.cli:main"

[tool.setuptools]
packages = ["w3cwatcher"]
