[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "w3cwatcher"
version = "0.2.2"
description = "Watch color of W3Champions match button and notify via Discord when it stops being red (in-queue)."
authors = [{ name = "Cubiss" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=9.0",
    "requests>=2.28",
    "platformdirs>=3.0",
    "tomlkit>=0.12",
    "pywin32>=306; platform_system == 'Windows'",
    "pystray>=0.19; platform_system == 'Windows'"
]

[project.scripts]
w3cwatcher = "w3cwatcher.cli:main"

[tool.setuptools]
packages = ["w3cwatcher", "w3cwatcher.utils"]

[tool.black]
line-length = 107
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''